# zonenet

./: .gitignore  README.md  app.py  manage_db.py  package-lock.json  package.json  pyproject.toml  tasks.db  traffic_analysis_visualization.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  jobs.py  ws.py
backend/app/core/: auth.py  config.py  detector.py  live_detector.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  video.py
backend/app/schemas/: video.py
backend/app/services/: db.py  detector.py  file_handler.py  processor.py
core/: detector.py  live_detector.py
frontend/: .gitignore  next.config.ts  package.json
frontend/app/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/login/: layout.tsx
frontend/components/: auth-context.tsx  auth-guard.tsx  header.tsx
frontend/components/create/: tools-panel.tsx  video-preview.tsx
frontend/components/video-analytics/: upload-area.tsx  video-card.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/utils/: api.ts  colors.ts  types.ts
instance/: tasks.db
static/css/: draw.css  globals.css  main.css  output.css  videoresult.css
static/js/: camera.js  live.js  zone.js
static/script/: draw.js  main.js  result.js  sidebar.js
templates/: base.html  camera.html  draw.html  live.html  main.html  result.html  zone.html
utils/: db.py  file_handler.py  processor.py
(+30 files in other folders)
