[project]
name = "custom-region-object-counter-yolo11"
version = "0.1.0"
description = "Custom Region Object Counter using YOLO11"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-wtf>=1.2.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "ultralytics>=8.3.0",

    "werkzeug>=3.0.0",
    "lapx>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

